RESOLVED FIXED196574
[JSC] Exception verification crash on operationArrayIndexOfValueInt32OrContiguous
https://bugs.webkit.org/show_bug.cgi?id=196574
Summary [JSC] Exception verification crash on operationArrayIndexOfValueInt32OrContig...
Yusuke Suzuki
Reported 2019-04-03 15:55:16 PDT
...
Attachments
Patch (2.83 KB, patch)
2019-04-03 16:10 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2019-04-03 15:55:42 PDT
The first (& easy) issue found by https://trac.webkit.org/changeset/243832/webkit
Yusuke Suzuki
Comment 2 2019-04-03 16:10:52 PDT
WebKit Commit Bot
Comment 3 2019-04-03 16:29:54 PDT
Comment on attachment 366662 [details] Patch Clearing flags on attachment: 366662 Committed r243835: <https://trac.webkit.org/changeset/243835>
WebKit Commit Bot
Comment 4 2019-04-03 16:29:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-04-03 16:30:24 PDT
Note You need to log in before you can comment on or make changes to this bug.