[JSC] Exception verification crash on operationArrayIndexOfValueInt32OrContiguous https://bugs.webkit.org/show_bug.cgi?id=196574

Reviewed by Saam Barati.

JSTests:

* stress/string-index-of-exception-check.js: Added.
(blurType):
(1.forEach):

Source/JavaScriptCore:

This patch adds missing exception check in operationArrayIndexOfValueInt32OrContiguous.

* dfg/DFGOperations.cpp:


Canonical link: https://commits.webkit.org/210831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243835 268f45cc-cd09-0410-ab3c-d52691b4dbfc